--- a/lab2.html
+++ b/lab2.html
@@ -2,5 +2,6 @@
 <body>
 <h1>Lab2</h1>
 <p>Owner File is Mr.Dachawat Fangnok Number 5710997103</p>
+<p>Edited Mr.Athiwat  suwannakum Number 5710997112</p>
 </body>
 </html>
